--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -7,20 +7,20 @@
   <div class="container">
     <div class="row pb-4">
       <div class="col-4 text-right"><%= f.label :お名前 %></div>
-      <div class="col-7"><%= f.text_field :name, autofocus: true, placeholder:"お名前", :size => "50" %></div>
+      <div class="col-7"><%= f.text_field :name, autofocus: true, placeholder:"鈴木一郎", :size => "50" %></div>
     </div>
     <div class="row pb-4">
       <div class="col-4 text-right"><%= f.label :メールアドレス %></div>
-      <div class="col-7"><%= f.email_field :email, placeholder:"メールアドレス", :size => "50" %></div>
+      <div class="col-7"><%= f.email_field :email, placeholder:"example@gmail.com", :size => "50" %></div>
     </div>
     <div class="row pb-4">
       <div class="col-4 text-right"><%= f.label :電話番号 %></div>
-      <div class="col-7"><%= f.text_field :phone_number, placeholder:"電話番号", :size => "50" %></div>
+      <div class="col-7"><%= f.text_field :phone_number, placeholder:"0300000000", :size => "50" %></div>
     </div>
     <div class="row pb-4">
       <div class="col-4 text-right"><%= f.label :パスワード %></div>
       <div class="col-7">
-        <%= f.password_field :password, autocomplete: "new-password", placeholder:"パスワード", :size => "50" %>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder:"111111", :size => "50" %>
       </div>
     </div>
     <div class="row" style="padding-bottom: 70px;">
