--- a/app/views/customers/estates/_search.html.erb
+++ b/app/views/customers/estates/_search.html.erb
@@ -27,7 +27,7 @@
 
     <%= f.select :floor_eq,
     [["1R"],["1K"],["1DK"],["1LDK"],["2K"],["2DK"],["2LDK"],["3DK"],["3LDK"],
-    ["4DK"],["4LDK"],["5DK"],["5LDK"]], {include_blank: "間取り"} %>
+    ["4LDK"],["5LDK"]], {include_blank: "間取り"} %>
 
     <%= f.number_field :price_gteq, :placeholder => "賃料 (半角数字)", style: "border-width: thin; margin-left: 1px; height: 22px; border-radius: 2px;" %> 〜
     <%= f.number_field :price_lteq, :placeholder => "賃料 (半角数字)", style: "border-width: thin; height: 22px; border-radius: 2px;" %>
