--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -4,7 +4,7 @@
   入稿物件一覧
 </div>
 <div class="notice text-center" style="padding-bottom: 50px; color: #FA601A;">
-  <%= flash[:notice] %>
+  <%= flash[:new] %>
 </div>
 
 <div class="container" style="margin-bottom: 20px;">
@@ -55,7 +55,7 @@
                   <% end %>
                   <%= estate.researches.count %>
                 </td>
-                <td><%= link_to "削除", admins_estate_path(estate), method: :delete, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %></td>
+                <td><%= link_to "削除", admins_estate_path(estate), method: :delete, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;", data: { confirm: '削除しますか？' } %></td>
               </tr>
             </table>
           </div>
