--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -39,47 +39,117 @@
           :size=>"102x10" %>
         </div>
       </div>
-      <div class="row pb-4">
-        <div class="col text-center"><%= f.label :背景画像 %></div>
-        <div class="col text-center"><%= f.attachment_field :background_image %></div>
-        <div class="col text-center"><%= f.label :間取り図画像 %></div>
-        <div class="col text-center"><%= f.attachment_field :floor_image %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :背景画像 %>
+          <%= f.attachment_field :background_image %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :間取り図画像 %>
+          <%= f.attachment_field :floor_image %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
-      <div class="row pb-4">
-        <div class="col text-center"><%= f.label :物件画像１ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_a %></div>
-        <div class="col text-center"><%= f.label :物件画像２ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_b %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像１ %>
+          <%= f.attachment_field :property_image_a %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像２ %>
+          <%= f.attachment_field :property_image_b %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
-      <div class="row pb-4">
-        <div class="col text-center"><%= f.label :物件画像３ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_c %></div>
-        <div class="col text-center"><%= f.label :物件画像４ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_d %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像３ %>
+          <%= f.attachment_field :property_image_c %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像４ %>
+          <%= f.attachment_field :property_image_d %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
-      <div class="row pb-4">
-        <div class="col text-center"><%= f.label :物件画像５ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_e %></div>
-        <div class="col text-center"><%= f.label :物件画像６ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_f %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像５ %>
+          <%= f.attachment_field :property_image_e %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像６ %>
+          <%= f.attachment_field :property_image_f %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
-      <div class="row pb-4">
-        <div class="col text-center"><%= f.label :物件画像７ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_g %></div>
-        <div class="col text-center"><%= f.label :物件画像８ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_h %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像７ %>
+          <%= f.attachment_field :property_image_g %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像８ %>
+          <%= f.attachment_field :property_image_h %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
-      <div class="row pb-4">
-        <div class="col text-center"><%= f.label :物件画像９ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_i %></div>
-        <div class="col text-center"><%= f.label :物件画像１０ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_j %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像９ %>
+          <%= f.attachment_field :property_image_i %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像１０ %>
+          <%= f.attachment_field :property_image_j %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
-      <div class="row">
-        <div class="col text-center"><%= f.label :物件画像１１ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_k %></div>
-        <div class="col text-center"><%= f.label :物件画像１２ %></div>
-        <div class="col text-center"><%= f.attachment_field :property_image_l %></div>
+      <div class="row pb-4 text-left" style="margin-right: 1px;">
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像１１ %>
+          <%= f.attachment_field :property_image_k %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "150x150" %>
+        </div>
+        <div class="col text-center pt-5">
+          <%= f.label :物件画像１２ %>
+          <%= f.attachment_field :property_image_l %>
+        </div>
+        <div>
+          <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "150x150" %>
+        </div>
       </div>
       <div class="row justify-content-center" style="padding: 60px 0;">
         <%= f.submit "入稿する", class: "search" %>
