--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -26,6 +26,10 @@
         <div class="favorite_<%= @estate.id %>">
           <%= render "customers/favorites/favorite", estate: @estate %>
         </div><br>
+      <% else %>
+        <div class="favorite" style="font-size: 22px;">
+          <i class="fas fa-building"></i><%= @estate.favorites.count %>
+        </div>
       <% end %>
 
       <p>投稿日時　<%= @estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
