--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -41,7 +41,9 @@
   <%= link_to image_tag("logo1.jpg"), root_path, class: "image-top" %>
 </div>
 
-<%= flash[:notice] %>
+<div class="text-center pt-5" style="font-size: 20px; font-weight: bold;">
+  <%= flash[:notice] %>
+</div>
 
 <%= search_form_for @q do |f| %>
   <div class="d-flex justify-content-center" style="padding-top: 50px;">
@@ -87,7 +89,6 @@
     <%= f.submit "検索", class: "search" %>
   </div>
 <% end %>
-
 
 <div class="new" style="margin-top: 100px; padding-bottom: 100px; background-color: #EB9FEF;">
   <div class="row justify-content-center p-5" style="color: white; font-weight: bold;">
