--- a/app/views/customers/customers/_footer.html.erb
+++ b/app/views/customers/customers/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer" style="background-color: #18003E;">
+<footer class="footer" style="background-color: #18003E; padding-right: 50px;">
   <nav class="navbar">
     <a class="navbar-brand pr-5" href="/"><%= image_tag('logo.jpg') %></a>
   </nav>
