--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -1,54 +1,79 @@
 <%= render "admins/customers/header" %>
 
-<div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">カスタマー一覧</div>
+<div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
+  会員一覧
+</div>
+
+<div class="text-center pt-3 pb-3" style="font-size: 20px; font-weight: bold;">
+  <%= flash[:status] %>
+</div>
+
 <div class="container" style="margin-bottom: 20px;">
   <% if @customers.present? %>
     <% @customers.each do |customer| %>
       <div class="card shadow">
         <div class="row pt-4">
-          <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">お名前</div>
+          <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">
+            お名前
+          </div>
           <div class="col-8">
-            <div class="card" style="font-size: 25px;">
+            <div class="card" style="font-size: 25px; padding-left: 10px;">
               <%= customer.name %>
             </div>
           </div>
         </div>
         <div class="row pt-4">
-          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">メールアドレス</div>
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
+            メールアドレス
+          </div>
           <div class="col-8">
-            <div class="card" style="font-size: 25px;">
+            <div class="card" style="font-size: 25px; padding-left: 10px;">
               <%= customer.email %>
             </div>
           </div>
         </div>
         <div class="row pt-4">
-          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">電話番号</div>
-          <div class="col-8">
-            <div class="card" style="font-size: 25px;">
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
+            電話番号
+          </div>
+          <div class="col-3">
+            <div class="card" style="font-size: 25px; padding-left: 10px;">
               <%= customer.phone_number %>
             </div>
           </div>
-        </div>
-        <div class="row pt-4">
-          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">お問い合わせ件数</div>
-          <div class="col-8">
-            <div class="researches" style="font-size: 22px;">
-              <%= link_to admins_customer_researches_path(customer) do %>
-                <i class="fas fa-house-user"></i>
-              <% end %>
-              <%= customer.researches.count %>
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
+            会員ステータス
+          </div>
+          <div class="col-2">
+            <div class="card text-center" style="font-size: 25px;">
+              <%= customer.status %>
             </div>
           </div>
         </div>
         <div class="row pt-4">
-          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">お気に入り件数</div>
-          <div class="col-8">
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
+            お問い合わせ件数
+          </div>
+          <div class="col-1">
+            <div class="researches" style="font-size: 22px;">
+              <%= link_to admins_customer_researches_path(customer) do %>
+              <%= customer.researches.count %>
+              <% end %>
+            </div>
+          </div>
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">
+            お気に入り件数
+          </div>
+          <div class="col-1">
             <div class="researches" style="font-size: 22px;">
               <%= link_to admins_customer_favorites_path(customer) do %>
-                <i class="fas fa-house-user"></i>
-              <% end %>
               <%= customer.favorites.count %>
+              <% end %>
             </div>
+          </div>
+          <div class="col-1"></div>
+          <div class="col-2 text-right">
+            <%= link_to "編集", edit_admins_customer_path(customer), class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %>
           </div>
         </div>
     　</div>
