--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
       </li>
+      <li class="nav-item">
+          <%= link_to "管理者ログイン", new_admin_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        </li>
       <% else %>
       <li class="nav-item">
         <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
@@ -31,6 +34,9 @@
       <li class="nav-item">
         <%= link_to "ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
       </li>
+      <li class="nav-item">
+        <%= link_to "管理者ログイン", new_admin_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+      </li>
       <% end %>
       </ul>
     </div>
@@ -41,7 +47,7 @@
   <%= link_to image_tag("logo1.jpg"), root_path, class: "image-top" %>
 </div>
 
-<div class="text-center pt-5" style="font-size: 20px; font-weight: bold;">
+<div class="text-center pt-5" style="font-size: 20px; font-weight: bold; color: #FA601A;">
   <%= flash[:notice] %>
 </div>
 
