--- a/app/views/customers/researches/new.html.erb
+++ b/app/views/customers/researches/new.html.erb
@@ -1,18 +1,70 @@
 <%= render "customers/customers/header" %>
 
 <div class="text-center" style="padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">お問い合わせ</div>
+
+<%= render 'layouts/error_messages', model: @research %>
+
 <%= form_with model: @research, url: estate_researches_path, local: true do |f| %>
   <div class="container">
     <div class="card shadow" style="margin: 0 0 150px 0;">
       <div class="row" style="padding: 60px 0 40px 0">
         <div class="col-2 text-center"><%= f.label :タイトル %></div>
-        <div class="col-5"><%= f.text_field :title, placeholder:"タイトルをご入力ください。", :size=>"101x10" %></div>
+        <div class="col-10"><%= f.text_field :title, placeholder:"お問い合わせタイトルを2文字以上でご入力ください。", :size=>"105x10" %></div>
       </div>
       <div class="row pb-5">
         <div class="col-2 text-center"><%= f.label :本文 %></div>
-        <div class="col-1"><%= f.text_area :body, placeholder:"コメントをご入力ください。", :size=>"100x10" %></div>
+        <div class="col-10"><%= f.text_area :body, placeholder:"お問い合わせ内容を10文字以上でご入力ください。", :size=>"104x10" %></div>
       </div>
-      <div class="row justify-content-center pb-5"><%= f.submit "お問い合わせする", class: "search" %></div>
+      <div class="row justify-content-center pb-5">
+        <%= f.submit "お問い合わせする", class: "search" %>
+      </div>
+      <div class="accordion" id="accordionExample">
+        <div class="card">
+          <div class="card-header text-center" id="headingOne">
+            <h2 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                物件情報
+              </button>
+            </h2>
+          </div>
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-3">
+                  <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "200x200" %>
+                </div>
+                <div class="col-9">
+                  <div class="row pt-4 pb-3">
+                    <div class="col-2">物件名</div>
+                    <div class="col-10"><%= @estate.name %> <%= @estate.room_number %>号室</div>
+                  </div>
+                  <div class="row pb-3">
+                    <div class="col-2">住所</div>
+                    <div class="col-10"><%= @estate.address %></div>
+                  </div>
+                  <div class="row pb-3">
+                    <div class="col-2">賃料
+                    </div>
+                    <div class="col-10">¥<%= @estate.price.to_s(:delimited) %></div>
+                  </div>
+                  <div class="row pb-3">
+                    <div class="col-2">間取り</div>
+                    <div class="col-10"><%= @estate.floor %></div>
+                  </div>
+                </div>
+              </div>
+              <div class="row justify-content-center pt-3 pb-3">
+                物件概要
+              </div>
+              <div class="row">
+                <div class="info col-12">
+                  <%= @estate.info %><br><br>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
