お問い合わせ状況追加、会員ステータス追加

--- a/app/views/admins/customers/_header.html.erb
+++ b/app/views/admins/customers/_header.html.erb
@@ -1,6 +1,13 @@
 <header class="sticky-top shadow-sm" style="width: 100%;">
   <nav class="navbar navbar-expand-xs navbar-light">
     <a class="navbar-brand p-0" href="/admins/sign_in"><%= image_tag('logo1.jpg') %></a>
+    
+    <% if researches.present? %>
+      <div class="researches text-left" style="font-size: 20px; font-weight: bold;">
+        <%= link_to "未対応のお問い合わせが#{researches.count}件あります。", admins_researches_path %>
+      </div>
+    <% end %>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
