--- a/app/views/admins/customers/edit.html.erb
+++ b/app/views/admins/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render "admins/customers/header" %>
+<%= render "admins/customers/header", researches: @researches %>
 
 <div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
   <%= @customer.name %> 様の編集ページ
