--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -1,8 +1,9 @@
-<%= render "admins/customers/header" %>
+<%= render "admins/customers/header", researches: @researches %>
 
 <div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">
   入稿物件一覧
 </div>
+
 <div class="notice text-center" style="padding-bottom: 50px; color: #FA601A;">
   <%= flash[:new] %>
 </div>
