--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -27,6 +27,10 @@
                 <div class="favorite_<%= estate.id %>">
                   <%= render "customers/favorites/favorite", estate: estate %>
                 </div>
+              <% else %>
+                <div class="favorite" style="font-size: 22px;">
+                  <i class="fas fa-building"></i><%= estate.favorites.count %>
+                </div>
               <% end %>
             </div>
             <div class="card-footer" style="padding-left: 8px;">
