--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -97,7 +97,7 @@
 <% end %>
 
 <div class="new" style="margin-top: 100px; padding-bottom: 100px; background-color: #EB9FEF;">
-  <%= render "ranks", estates: @estates %>
+  <%= render "slide", estates: @estates %>
   <%= render "ranks", all_ranks: @all_ranks %>
 </div>
 
